cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          (c) 2022 Daniel Lin
author:             Daniel Lin
maintainer:         ephemient@gmail.com
homepage:           https://github.com/ephemient/aoc2022/tree/main/hs
synopsis:           Advent of Code 2022 - my solutions in Haskell
description:        Please see the README on GitHub at <https://github.com/ephemient/aoc2022/blob/main/hs/README.md>

data-files:
    day1.txt
  , day2.txt
  , day3.txt
  , day4.txt
  , day5.txt
  , day6.txt
  , day7.txt
  , day8.txt
  , day9.txt
  , day10.txt
  , day11.txt
  , day12.txt
  , day13.txt
  , day14.txt
  , day15.txt
  , day16.txt
  , day17.txt
  , day18.txt
  , day19.txt

extra-source-files:
    README.md

library
    exposed-modules:
        Day1
      , Day2
      , Day3
      , Day4
      , Day5
      , Day6
      , Day7
      , Day8
      , Day9
      , Day10
      , Day11
      , Day12
      , Day13
      , Day13Fast
      , Day14
      , Day15
      , Day16
      , Day17
      , Day18
      , Day19
    build-depends:
        array ^>=0.5.4.0
      , base ^>=4.16.0.0
      , containers ^>=0.6.5.1
      , heap ^>=1.0.4
      , megaparsec ^>=9.3.0
      , mtl ^>=2.2.2
      , primitive ^>=0.7.4.0
      , split ^>=0.2.3.5
      , template-haskell ^>=2.18.0.0
      , text ^>=2.0.0
      , vector ^>=0.13.0.0
    other-modules:
        Common
      , Day9.TH
    hs-source-dirs:   src
    default-language: GHC2021

executable aoc2022-exe
    main-is:          Main.hs
    build-depends:
        aoc2022
      , base ^>=4.16.0.0
      , megaparsec ^>=9.3.0
      , text ^>=2.0.0
    other-modules:
        Paths_aoc2022
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -no-hs-main -threaded
    c-sources:        app/cbits/main.c

test-suite aoc2022-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        aoc2022
      , base ^>=4.16.0.0
      , hspec ^>=2.10.0
      , text ^>=2.0.0
    other-modules:
        Day1Spec
      , Day2Spec
      , Day3Spec
      , Day4Spec
      , Day5Spec
      , Day6Spec
      , Day7Spec
      , Day8Spec
      , Day9Spec
      , Day10Spec
      , Day11Spec
      , Day12Spec
      , Day13Spec
      , Day14Spec
      , Day15Spec
      , Day16Spec
      , Day17Spec
      , Day18Spec
      , Day19Spec
    hs-source-dirs:   test
    default-language: GHC2021
    build-tool-depends:
        hspec-discover:hspec-discover ^>=2.10.0
    ghc-options:      -threaded -rtsopts "-with-rtsopts=-N -qg"

benchmark aoc2022-bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        aoc2022
      , base ^>=4.16.4.0
      , criterion ^>=1.6.0.0
      , text ^>=2.0.0
    other-modules:
        Paths_aoc2022
    hs-source-dirs:   bench
    default-language: GHC2021
    ghc-options:      -no-hs-main -threaded
    c-sources:        bench/cbits/main.c
