[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
license = "BSD-3-Clause"
authors = ["Daniel Lin <ephemient@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ephemient/aoc2022/tree/main/py"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent"
]
include = ["aoc2022/day*.txt"]

[tool.poetry.dependencies]
python = "^3.11"
natsort = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.2"
pylint = "^2.15.9"
pytest = "^7.2.0"
pytest-benchmark = { version = "^4.0.0", extras = ["histogram"] }

[tool.poetry.scripts]
aoc2022 = "aoc2022.main:main"

[tool.poetry.plugins."aoc2022.days"]
day1 = "aoc2022.day1:parts"
day2 = "aoc2022.day2:parts"
day3 = "aoc2022.day3:parts"
day4 = "aoc2022.day4:parts"
day5 = "aoc2022.day5:parts"
day6 = "aoc2022.day6:parts"
day7 = "aoc2022.day7:parts"
day8 = "aoc2022.day8:parts"
day9 = "aoc2022.day9:parts"
day10 = "aoc2022.day10:parts"
day11 = "aoc2022.day11:parts"
day12 = "aoc2022.day12:parts"
day13 = "aoc2022.day13:parts"
day13Fast = "aoc2022.day13_fast:parts"
day14 = "aoc2022.day14:parts"
day15 = "aoc2022.day15:parts"
day16 = "aoc2022.day16:parts"
day17 = "aoc2022.day17:parts"
day18 = "aoc2022.day18:parts"
day19 = "aoc2022.day19:parts"
day20 = "aoc2022.day20:parts"

[tool.black]
target_version = ["py311"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.basic]
good-names-rgxs = ["[xyz]\\d*"]

[tool.pytest.ini_options]
addopts = '--doctest-modules --benchmark-disable --benchmark-sort=fullname'
required_plugins = ['pytest-benchmark']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
