[package]
name = "aoc2022"
description = "Advent of Code 2022 - my answers"
version = "0.1.0"
authors = ["Daniel Lin <ephemient@gmail.com>"]
license = "BSD-3-Clause"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/ephemient/aoc2022/tree/main/rs"
build = "build.rs"

[lib]
name = "aoc2022"
path = "src/lib.rs"

[[bin]]
name = "aoc2022"
path = "src/main.rs"

[build-dependencies]
build_const = "0.2.2"

[dependencies]
build_const = "0.2.2"
rayon = "1.7.0"
smallvec = "1.10.0"
static_init = "1.0.3"

[dev-dependencies]
criterion = "0.4.0"
gag = "1.0.0"
pretty_assertions = "1.3.0"

[[bench]]
name = "criterion"
harness = false

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 3
